java lupa password dan perbaikan tampilan

--- a/NurseryPolije/app/src/main/res/values/strings.xml
+++ b/NurseryPolije/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="regis_email_hint">Email</string>
     <string name="regis_password1_hint">Password</string>
     <string name="regis_password2_hint">Konfirmasi Password</string>
+    <string name="username">username</string>
 </resources>
